force-app/main/default/objects/Contact_Point_Consent__c/Contact_Point_Consent__c.object-meta.xml
<CustomObject>
    <label>Contact Point Consent</label>
    <nameField>
        <displayFormat>CPC-{000000}</displayFormat>
        <label>Contact Point Consent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Point Consent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>