force-app/main/default/objects/Contact_Point_Consent__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Point Consent</relationshipLabel>
    <relationshipName>Contact_Point_Consent</relationshipName>
    <type>Lookup</type>
</CustomField>