force-app/main/default/objects/Contact_Point_Consent__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>Contact Point Consent</relationshipLabel>
    <relationshipName>Contact_Point_Consent</relationshipName>
    <type>Lookup</type>
</CustomField>