force-app/main/default/objects/Contact_Point_Consent__c/fields/Capture_Contact_Point_Type__c.field-meta.xml
<CustomField>
    <fullName>Capture_Contact_Point_Type__c</fullName>
    <label>Capture Contact Point Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>