force-app/main/default/objects/Contact_Point_Consent__c/fields/Capture_Date__c.field-meta.xml
<CustomField>
    <fullName>Capture_Date__c</fullName>
    <label>Capture Date</label>
    <type>DateTime</type>
</CustomField>