force-app/main/default/objects/Contact_Point_Consent__c/fields/Capture_Source__c.field-meta.xml
<CustomField>
    <fullName>Capture_Source__c</fullName>
    <label>Capture Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>