force-app/main/default/objects/Contact_Point_Consent__c/fields/Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Status__c</fullName>
    <label>Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>Opt In Pending</fullName>
            </value>
            <value>
                <fullName>Opt Out Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>