force-app/main/default/objects/Contact_Point_Consent__c/fields/Contact_Point__c.field-meta.xml
<CustomField>
    <fullName>Contact_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point</label>
    <referenceTo>Contact_Point__c</referenceTo>
    <relationshipLabel>Contact Point Consent</relationshipLabel>
    <relationshipName>Contact_Point_Consent</relationshipName>
    <type>Lookup</type>
</CustomField>