force-app/main/default/objects/Contact_Point_Consent__c/fields/Data_Use_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Data_Use_Purpose__c</fullName>
    <label>Data Use Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>