force-app/main/default/objects/Contact_Point_Consent__c/fields/Double_Consent_Capture_Date__c.field-meta.xml
<CustomField>
    <fullName>Double_Consent_Capture_Date__c</fullName>
    <label>Double Consent Capture Date</label>
    <type>DateTime</type>
</CustomField>