force-app/main/default/objects/Contact_Point_Consent__c/fields/Inbox__c.field-meta.xml
<CustomField>
    <fullName>Inbox__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbox</label>
    <referenceTo>Inbox__c</referenceTo>
    <relationshipLabel>Contact Point Consent</relationshipLabel>
    <relationshipName>Contact_Point_Consent</relationshipName>
    <type>Lookup</type>
</CustomField>