force-app/main/default/objects/Contact_Point_Consent__c/fields/Member_Phone__c.field-meta.xml
<CustomField>
    <fullName>Member_Phone__c</fullName>
    <label>Member Phone</label>
    <length>150</length>
    <type>Text</type>
</CustomField>